--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -246,6 +246,8 @@ info.item.bullet.type.incendiary=Incendiary Bullet
 info.item.bullet.type.armor_piercing=Armor Piercing Bullet
 info.item.bullet.diameter=Diameter (mm): 
 info.item.bullet.quantity=Quantity: 
+info.item.barrel.capacity=Capacity: 
+info.item.crate.capacity=Capacity: 
 
 info.item.wrench.use=Use on vehicle to change instruments.
 info.item.wrench.attack=Attack a part to remove.
