Forgot lang file in last commit.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -218,7 +218,7 @@ info.item.engine.oilleak=Has an oil leak!
 info.item.engine.fuelleak=Has a fuel leak!
 info.item.engine.brokenstarter=Electric starter is broken!
 info.item.engine.creative=Creative: Uses no fuel
-info.item.ground_device.diameter=Climb height: 
+info.item.ground_device.diameter=Diameter: 
 info.item.ground_device.motivefriction=Power friction: 
 info.item.ground_device.lateralfriction=Turning friction: 
 info.item.ground_device.rotatesonshaft_true=Is a wheel 
