--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -217,7 +217,7 @@ info.item.engine.hours=Runtime hours:
 info.item.engine.oilleak=Has an oil leak!
 info.item.engine.fuelleak=Has a fuel leak!
 info.item.engine.brokenstarter=Electric starter is broken!
-info.item.engine.creative=Creative: Uses no fuel
+info.item.engine.creative=Creative: Needs no fuel, accumulates no hours, cannot blow up.
 info.item.ground_device.diameter=Diameter: 
 info.item.ground_device.motivefriction=Power friction: 
 info.item.ground_device.lateralfriction=Turning friction: 
