Added keybind to run throttle at half-speed when using keyboard controls.  Implements #173.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -126,6 +126,7 @@ input.car.look_d=LookDown
 input.car.look_a=LookDirectional
 input.car.changehud=HUDMode
 input.car.stop=StopEngine
+input.car.slow=Slow
 input.car.turnsignal_r=RightTurnSignal
 input.car.turnsignal_l=LeftTurnSignal
 
