--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -174,8 +174,8 @@ gui.config.header.controls=CONTROLS
 gui.config.controls.title=Chose a configuration to change:
 gui.config.controls.aircraft.keyboard=AIRCRAFT KEYBOARD
 gui.config.controls.aircraft.joystick=AIRCRAFT JOYSTICK
-gui.config.controls.car.keyboard=CAR KEYBOARD
-gui.config.controls.car.joystick=CAR JOYSTICK
+gui.config.controls.car.keyboard=CAR/BOAT KEYBOARD
+gui.config.controls.car.joystick=CAR/BOAT JOYSTICK
 gui.config.controls.confirm=Confirm
 gui.config.joystick.error=ERROR: MTS could not initialize the control system!  This is likely due to a device mis-representing itself as a joystick to Java.  Mice have been known to have this issue, especially Corsair mice, so try a different mouse.  If the issue persists please contact the mod author.
 gui.config.joystick.select=Choose a joystick:
