--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -232,9 +232,10 @@ info.item.propeller.pitch=Pitch:
 info.item.propeller.diameter=Diameter: 
 info.item.propeller.maxrpm=Max RPM: 
 info.item.propeller.health=Health: 
-info.item.gun.type.fixed=Type: Fixed-Mount Gun 
+info.item.gun.type.fixed=Type: Fixed-Mount Gun
+info.item.gun.type.tripod=Type: Tripod-Mount Gun
 info.item.gun.diameter=Diameter (mm): 
-info.item.gun.length=Length (mm): 
+info.item.gun.length=Length (m): 
 info.item.gun.fireDelay=Fire Delay (ticks): 
 info.item.gun.muzzleVelocity=Velocity (blk/s): 
 info.item.gun.capacity=Bullet Capacity: 
