--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -304,7 +304,7 @@ tile.trafficsign.name=Traffic Sign
 
 itemGroup.tabMTSCore=MTS Core Components
 key.categories.mts=Minecraft Transport Simulator
-key.config=Open configuration screen
+key.mts.config=Open configuration screen
 
 advancements.mts.root.title=Immersive Vehicles (MTS)
 advancements.mts.root.description=Start your journey into powered transport!
