Added component bench crafting recipe and advancement.

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -311,6 +311,8 @@ advancements.mts.root.description=Start your journey into powered transport!
 advancements.mts.rtfm.title=RTFM
 advancements.mts.rtfm.description=Craft a Manual
 
+advancements.mts.componentbench.title=You Can Buy Anything Online
+advancements.mts.componentbench.description=Create a Component Bench
 advancements.mts.custombench.title=Custom Parts
 advancements.mts.custombench.description=Create a Tool Bench
 advancements.mts.enginebench.title=Rev it Up
