Added a radio! We'll see if I can figure out how to compile it...

--- a/main/resources/assets/mts/lang/en_US.lang
+++ b/main/resources/assets/mts/lang/en_US.lang
@@ -85,6 +85,7 @@ input.aircraft.brake_analog=Brake
 input.aircraft.panel=Panel
 input.aircraft.park=ParkingBrake
 input.aircraft.gun=Gun
+input.aircraft.radio=Radio
 input.aircraft.zoom_i=ZoomIn
 input.aircraft.zoom_o=ZoomOut
 input.aircraft.changeview=ChangeView
@@ -120,6 +121,7 @@ input.car.lights_special=SpecialLights
 input.car.park=ParkingBrake
 input.car.trailer=TrailerLink
 input.car.gun=Gun
+input.car.radio=Radio
 input.car.zoom_i=ZoomIn
 input.car.zoom_o=ZoomOut
 input.car.changeview=ChangeView
