Moved some functions from controls to a new HUD. Less clutter, and addresses #234.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -117,13 +117,10 @@ input.car.turn_l=TurnLeft
 input.car.gas=Gas
 input.car.brake=Brake
 input.car.brake_analog=Brake
+input.car.panel=Panel
 input.car.shift_u=ShiftUp
 input.car.shift_d=ShiftDown
-input.car.start=StartEngine
 input.car.horn=Horn
-input.car.siren=Siren
-input.car.lights=Lights
-input.car.lights_special=SpecialLights
 input.car.park=ParkingBrake
 input.car.trailer=TrailerLink
 input.car.gun=Gun
@@ -137,10 +134,7 @@ input.car.look_u=LookUp
 input.car.look_d=LookDown
 input.car.look_a=LookDirectional
 input.car.changehud=HUDMode
-input.car.stop=StopEngine
 input.car.slow=Slow
-input.car.turnsignal_r=RightTurnSignal
-input.car.turnsignal_l=LeftTurnSignal
 
 gui.trafficsignalcontroller.scan=Scan For Signals & Components
 gui.trafficsignalcontroller.scandistance=Scan Distance: 
@@ -176,6 +170,13 @@ gui.panel.trim_roll=ROLL TRIM
 gui.panel.trim_pitch=PITCH TRIM
 gui.panel.trim_yaw=YAW TRIM
 gui.panel.reverse=REVERSE THRUST
+gui.panel.powerswitch=POWER
+gui.panel.runninglights=RUNNINGLTS
+gui.panel.headlights=HEADLTS
+gui.panel.emergencylights=EMERGENCYLTS
+gui.panel.siren=SIREN
+gui.panel.trailer=TRAILER
+gui.panel.secondtrailer=TRAILER #2
 
 gui.instruments.main=Main Instruments
 gui.instruments.control=Control Panel
