Added jerrycan recipie and advancement.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -340,6 +340,8 @@ advancements.mts.wheelbench.description=Create a Wheel Workbench
 
 advancements.mts.fuelpump.title=Fill 'Er Up
 advancements.mts.fuelpump.description=Create a fuel pump
+advancements.mts.jerrycan.title=Just in Case...
+advancements.mts.jerrycan.description=Create a jerrycan
 advancements.mts.jumpercable.title=Jump Start
 advancements.mts.jumpercable.description=Create some jumper cables
 advancements.mts.key.title=Swiper no Swiping
