Converted GUIs using old wide_blank texture to use new texture.  Cleaned up and genricized some code while doing so.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -100,7 +100,6 @@ input.aircraft.look_r=LookRight
 input.aircraft.look_u=LookUp
 input.aircraft.look_d=LookDown
 input.aircraft.look_a=LookDirectional
-input.aircraft.changehud=HUDMode
 input.aircraft.trim_yaw_r=TrimYawRight
 input.aircraft.trim_yaw_l=TrimYawLeft
 input.aircraft.trim_pitch_u=TrimPitchUp
@@ -133,7 +132,6 @@ input.car.look_r=LookRight
 input.car.look_u=LookUp
 input.car.look_d=LookDown
 input.car.look_a=LookDirectional
-input.car.changehud=HUDMode
 input.car.slow=Slow
 
 gui.trafficsignalcontroller.scan=Scan For Signals & Components
@@ -204,7 +202,7 @@ gui.config.joystick.clear=Clear Assignment
 gui.config.joystick.choosemap=Choose what gets mapped to this button.
 gui.config.joystick.selectdigital=This DIGITAL button can control:
 gui.config.joystick.selectanalog=This ANALOG button can control:
-gui.config.joystick.calibrate1=Move the axis until the numbers stop changing.
+gui.config.joystick.calibrate1=Move axis until numbers stop changing.
 gui.config.joystick.calibrate2=Then hit confirm to save settings.
 gui.config.joystick.axismode=Axis mode: 
 gui.config.joystick.normal=Normal
