--- a/src/main/resources/assets/mts/lang/zh_CN.lang
+++ b/src/main/resources/assets/mts/lang/zh_CN.lang
@@ -56,138 +56,138 @@ interact.failure.seattaken=座位已被使用!
 interact.failure.vehiclelocked=载具已被锁定!
 interact.failure.vehicleowned=你不能移除这个载具及它的零件，因为你不是载具的主人!
 
-interact.jumpercable.firstlink=Linking first engine to jumper cable.
-interact.jumpercable.secondlink=Engines linked.  Transmitting power.
-interact.jumpercable.linkdropped=The two engines have moved too far apart from one another.  Breaking link.
-interact.jumpercable.powerequal=The two engines now have the same battery level.  Breaking link.
-interact.jumpercable.alreadylinked=This engine is already linked to another engine and cannot be linked.
-interact.jumpercable.toofar=The two engines are too far away.  They should be no further than 16 blocks apart.
-interact.jumpercable.samevehicle=The two engines are on the same vehicle.  That's not going to work well...
+interact.jumpercable.firstlink=正在将第一个引擎接上跨接电缆。
+interact.jumpercable.secondlink=引擎已连接，正在转移电能。
+interact.jumpercable.linkdropped=引擎相距太远，已断开连接。
+interact.jumpercable.powerequal=引擎电量相平，已断开连接。
+interact.jumpercable.alreadylinked=此引擎已与另一引擎连接，不可连接新引擎。
+interact.jumpercable.toofar=两个引擎相距太远，须相距 16 格以内。
+interact.jumpercable.samevehicle=两个引擎位于同一载具，跨接电缆无法正常工作。
 
-interact.trailer.connect=Trailer connected!
-interact.trailer.disconnect=Trailer disconnected.
-interact.trailer.nohitch=This vehicle does not have a hitch and therefore cannot tow anything.
-interact.trailer.wronghitch=This vehicle does not have the correct hitch for this trailer.
-interact.trailer.notfound=No trailers were found within 2 blocks of the hitch on this vehicle.
+interact.trailer.connect=拖车已连接!
+interact.trailer.disconnect=拖车已断开连接。
+interact.trailer.nohitch=此车没有挂接装置，因此不能牵引任何拖车。
+interact.trailer.wronghitch=此车的挂接装置与拖车类型不符。
+interact.trailer.notfound=此车挂接装置 2 格以内没有发现拖车。
 
-input.aircraft.mod=Mod
-input.aircraft.camlock=CamLock
-input.aircraft.yaw=Yaw
-input.aircraft.yaw_r=YawRight
-input.aircraft.yaw_l=YawLeft
-input.aircraft.pitch=Pitch
-input.aircraft.pitch_u=PitchUp
-input.aircraft.pitch_d=PitchDown
-input.aircraft.roll=Roll
-input.aircraft.roll_r=RollRight
-input.aircraft.roll_l=RollLeft
-input.aircraft.throttle=Throttle
-input.aircraft.throttle_u=ThrottleUp
-input.aircraft.throttle_d=ThrottleDown
-input.aircraft.flaps_u=FlapsUp
-input.aircraft.flaps_d=FlapsDown
-input.aircraft.brake=Brake
-input.aircraft.brake_analog=Brake
-input.aircraft.panel=Panel
-input.aircraft.park=ParkingBrake
-input.aircraft.gun=Gun
-input.aircraft.radio=Radio
-input.aircraft.zoom_i=ZoomIn
-input.aircraft.zoom_o=ZoomOut
-input.aircraft.changeview=ChangeView
-input.aircraft.look_l=LookLeft
-input.aircraft.look_r=LookRight
-input.aircraft.look_u=LookUp
-input.aircraft.look_d=LookDown
-input.aircraft.look_a=LookDirectional
-input.aircraft.trim_yaw_r=TrimYawRight
-input.aircraft.trim_yaw_l=TrimYawLeft
-input.aircraft.trim_pitch_u=TrimPitchUp
-input.aircraft.trim_pitch_d=TrimPitchDown
-input.aircraft.trim_roll_r=TrimRollRight
-input.aircraft.trim_roll_l=TrimRollLeft
-input.aircraft.reverse=Reverse
+input.aircraft.mod=模式
+input.aircraft.camlock=锁定视角
+input.aircraft.yaw=偏航
+input.aircraft.yaw_r=向右偏航
+input.aircraft.yaw_l=向左偏航
+input.aircraft.pitch=升降
+input.aircraft.pitch_u=抬升机头
+input.aircraft.pitch_d=压低机头
+input.aircraft.roll=翻转
+input.aircraft.roll_r=向右翻转
+input.aircraft.roll_l=向左翻转
+input.aircraft.throttle=油门
+input.aircraft.throttle_u=加速
+input.aircraft.throttle_d=减速
+input.aircraft.flaps_u=襟翼向上
+input.aircraft.flaps_d=襟翼向下
+input.aircraft.brake=刹车
+input.aircraft.brake_analog=刹车
+input.aircraft.panel=面板
+input.aircraft.park=手刹
+input.aircraft.gun=机枪
+input.aircraft.radio=电台
+input.aircraft.zoom_i=放大
+input.aircraft.zoom_o=缩小
+input.aircraft.changeview=改变视角
+input.aircraft.look_l=左看
+input.aircraft.look_r=右看
+input.aircraft.look_u=上看
+input.aircraft.look_d=下看
+input.aircraft.look_a=定向看
+input.aircraft.trim_yaw_r=配平偏右
+input.aircraft.trim_yaw_l=配平偏左
+input.aircraft.trim_pitch_u=配平仰望
+input.aircraft.trim_pitch_d=配平俯瞰
+input.aircraft.trim_roll_r=配平右翻
+input.aircraft.trim_roll_l=配平左翻
+input.aircraft.reverse=反推
 
-input.car.mod=Mod
-input.car.camlock=CamLock
-input.car.turn=Turn
-input.car.turn_r=TurnRight
-input.car.turn_l=TurnLeft
-input.car.gas=Gas
-input.car.brake=Brake
-input.car.brake_analog=Brake
-input.car.panel=Panel
-input.car.shift_u=ShiftUp
-input.car.shift_d=ShiftDown
-input.car.horn=Horn
-input.car.park=ParkingBrake
-input.car.trailer=TrailerLink
-input.car.gun=Gun
-input.car.radio=Radio
-input.car.zoom_i=ZoomIn
-input.car.zoom_o=ZoomOut
-input.car.changeview=ChangeView
-input.car.look_l=LookLeft
-input.car.look_r=LookRight
-input.car.look_u=LookUp
-input.car.look_d=LookDown
-input.car.look_a=LookDirectional
-input.car.slow=Slow
+input.car.mod=模式
+input.car.camlock=锁定视角
+input.car.turn=转向
+input.car.turn_r=右转
+input.car.turn_l=左转
+input.car.gas=油门
+input.car.brake=刹车
+input.car.brake_analog=刹车
+input.car.panel=面板
+input.car.shift_u=上移
+input.car.shift_d=下移
+input.car.horn=鸣笛
+input.car.park=手刹
+input.car.trailer=连接拖车
+input.car.gun=机枪
+input.car.radio=电台
+input.car.zoom_i=放大
+input.car.zoom_o=缩小
+input.car.changeview=改变视角
+input.car.look_l=左看
+input.car.look_r=右看
+input.car.look_u=上看
+input.car.look_d=下看
+input.car.look_a=定向看
+input.car.slow=慢行
 
-gui.trafficsignalcontroller.scan=Scan For Signals & Components
-gui.trafficsignalcontroller.scandistance=Scan Distance: 
-gui.trafficsignalcontroller.scanfound=Scan Found:
-gui.trafficsignalcontroller.primary=Primary axis: 
-gui.trafficsignalcontroller.signalmode=Mode: 
-gui.trafficsignalcontroller.modetime=Time Delay
-gui.trafficsignalcontroller.modetrigger=Vehicle Trigger
-gui.trafficsignalcontroller.greenmaintime=Time main signal is Green:
-gui.trafficsignalcontroller.greencrosstime=Time cross signal is Green: 
-gui.trafficsignalcontroller.yellowtime=Time all signals are Yellow: 
-gui.trafficsignalcontroller.allredtime=Time all signals are Red:
-gui.trafficsignalcontroller.confirm=CONFIRM 
+gui.trafficsignalcontroller.scan=扫描信号和组件：
+gui.trafficsignalcontroller.scandistance=扫描距离：
+gui.trafficsignalcontroller.scanfound=扫描发现：
+gui.trafficsignalcontroller.primary=主轴：
+gui.trafficsignalcontroller.signalmode=模式：
+gui.trafficsignalcontroller.modetime=延时
+gui.trafficsignalcontroller.modetrigger=载具触发器
+gui.trafficsignalcontroller.greenmaintime=主信号为绿的时长：
+gui.trafficsignalcontroller.greencrosstime=交叉信号为绿的时长：
+gui.trafficsignalcontroller.yellowtime=所有信号为黄的时长：
+gui.trafficsignalcontroller.allredtime=所有信号为红的时长：
+gui.trafficsignalcontroller.confirm=确认
 
-gui.vehicle_bench.type=Type
-gui.vehicle_bench.weight=Weight (kg)
-gui.vehicle_bench.fuel=Fuel Cap. (mb)
-gui.vehicle_bench.controllers=Drivers/Pilots
-gui.vehicle_bench.passengers=Passengers
-gui.vehicle_bench.cargo=Cargo
-gui.vehicle_bench.mixed=Mixed
-gui.vehicle_bench.engine=Engine Size
-gui.vehicle_bench.wheel=Wheel Size
-gui.vehicle_bench.color=Color
+gui.vehicle_bench.type=类型
+gui.vehicle_bench.weight=质量 (kg)
+gui.vehicle_bench.fuel=载油量 (mb)
+gui.vehicle_bench.controllers=驾驶员
+gui.vehicle_bench.passengers=乘客
+gui.vehicle_bench.cargo=货物
+gui.vehicle_bench.mixed=混合
+gui.vehicle_bench.engine=引擎尺寸
+gui.vehicle_bench.wheel=车轮尺寸
+gui.vehicle_bench.color=颜色
 
-gui.panel.navigationlights=NAV
-gui.panel.strobelights=STROBE
-gui.panel.taxilights=TAXI
-gui.panel.landinglights=LAND
-gui.panel.magneto=MAG
-gui.panel.starter=START
-gui.panel.trim_roll=ROLL TRIM
-gui.panel.trim_pitch=PITCH TRIM
-gui.panel.trim_yaw=YAW TRIM
-gui.panel.reverse=REVERSE THRUST
-gui.panel.runninglights=RUNNINGLTS
-gui.panel.headlights=HEADLTS
-gui.panel.emergencylights=EMERGENCYLTS
-gui.panel.siren=SIREN
-gui.panel.trailer=TRAILER
+gui.panel.navigationlights=航行灯
+gui.panel.strobelights=闪烁灯
+gui.panel.taxilights=滑行灯
+gui.panel.landinglights=降落灯
+gui.panel.magneto=磁电器
+gui.panel.starter=启动
+gui.panel.trim_roll=配平翻转
+gui.panel.trim_pitch=配平升降
+gui.panel.trim_yaw=配平偏航
+gui.panel.reverse=反推
+gui.panel.runninglights=发动灯
+gui.panel.headlights=大灯
+gui.panel.emergencylights=紧急灯
+gui.panel.siren=鸣笛
+gui.panel.trailer=拖车
 
-gui.instruments.main=Main Instruments
-gui.instruments.control=Control Panel
-gui.instruments.clear=CLEAR
-gui.instruments.idle=Select an instrument.
-gui.instruments.decide=Click an instrument to add, or CLEAR to remove.
+gui.instruments.main=主仪表
+gui.instruments.control=控制面板
+gui.instruments.clear=清除
+gui.instruments.idle=请选择仪表
+gui.instruments.decide=点击仪表来添加，或点击清除来删除
 
-gui.config.header.config=CONFIG
-gui.config.header.controls=CONTROLS
-gui.config.controls.title=Chose a configuration to change:
-gui.config.controls.aircraft.keyboard=AIRCRAFT KEYBOARD
-gui.config.controls.aircraft.joystick=AIRCRAFT JOYSTICK
-gui.config.controls.car.keyboard=CAR/BOAT KEYBOARD
-gui.config.controls.car.joystick=CAR/BOAT JOYSTICK
-gui.config.controls.confirm=Confirm
+gui.config.header.config=配置
+gui.config.header.controls=操作
+gui.config.controls.title=选择一项要改变的配置：
+gui.config.controls.aircraft.keyboard=飞机键盘
+gui.config.controls.aircraft.joystick=飞机摇杆
+gui.config.controls.car.keyboard=车船键盘
+gui.config.controls.car.joystick=车船摇杆
+gui.config.controls.confirm=确认
 gui.config.joystick.error=ERROR: MTS could not initialize the control system!  This is likely due to a device mis-representing itself as a joystick to Java.  Mice have been known to have this issue, especially Corsair mice, so try a different mouse.  If the issue persists please contact the mod author.
 gui.config.joystick.select=Choose a joystick:
 gui.config.joystick.name=Name:
@@ -206,7 +206,7 @@ gui.config.joystick.normal=Normal
 gui.config.joystick.invert=Inverted
 gui.config.joystick.confirm=Confirm
 
-gui.packmissing.title=!WARNING!
+gui.packmissing.title=!警告!
 gui.packmissing.reason=MTS has detected that it has been started without a content pack.  This will result in NO vehicles being present!
 gui.packmissing.nomod=If you do NOT have a content pack yet installed, please see the Curse page for this mod (located below) for a link to one.
 gui.packmissing.modlink=https://minecraft.curseforge.com/projects/minecraft-transport-simulator
